Spin tool top bar settings don't apply #58199

Closed
opened 2018-11-29 22:15:23 +01:00 by Alaska · 11 comments
Member

System Information:
CPU: Ryzen 5 2600
GPU: RX 570 4GB
OS: Windows 10 Home

Blender Version
Broken: Blender 2.8 Beta 26d5a3625e

Short description of error:
The spin tool and spin tool duplicate in edit mode ignore step settings changes in the top bar.

Exact steps for others to reproduce the error:

  1. Open Blender and switch to the 3D viewport.
  2. Create an object if there isn't one already.
  3. Enter edit mode on the object.
  4. From the tool bar, select spin or spin duplicate.
  5. In the top bar, adjust the step settings for the spin tool. I'd recommend changing the steps to 1.
  6. Use the gizmo on your object and notice that it's still spinning with nine steps (or the same number you set in the redo panel the last time you used the tool).
**System Information:** CPU: Ryzen 5 2600 GPU: RX 570 4GB OS: Windows 10 Home **Blender Version** Broken: Blender 2.8 Beta 26d5a3625ed **Short description of error:** The spin tool and spin tool duplicate in edit mode ignore step settings changes in the top bar. **Exact steps for others to reproduce the error:** 1. Open Blender and switch to the 3D viewport. 2. Create an object if there isn't one already. 3. Enter edit mode on the object. 4. From the tool bar, select spin or spin duplicate. 5. In the top bar, adjust the step settings for the spin tool. I'd recommend changing the steps to 1. 6. Use the gizmo on your object and notice that it's still spinning with nine steps (*or the same number you set in the redo panel the last time you used the tool*).
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
William Reynish self-assigned this 2018-11-29 22:31:12 +01:00

Not a bug. Use the panel in the bottom to adjust.

Not a bug. Use the panel in the bottom to adjust.
Author
Member

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Alaska reopened this issue 2018-11-29 23:03:03 +01:00
Author
Member

@WilliamReynish
I would consider this a bug as every other tool (take the bevel tool for example) respects edits made in the top bar prior to the tools use. And if this is working as expected, then why is the steps option included in the top bar if it does nothing?

@WilliamReynish I would consider this a bug as every other tool (take the bevel tool for example) respects edits made in the top bar prior to the tools use. And if this is working as expected, then why is the steps option included in the top bar if it does nothing?

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Yes you are right. @ideasman42 One for you

Yes you are right. @ideasman42 One for you
William Reynish removed their assignment 2019-01-22 13:13:54 +01:00
Campbell Barton was assigned by William Reynish 2019-01-22 13:13:54 +01:00

This issue still exists today: The Spin tool Steps property doesn't work when set from the top bar.

This issue still exists today: The Spin tool Steps property doesn't work when set from the top bar.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 6dfe6b4f19

This issue was referenced by 6dfe6b4f196d20be24a0c71dcc90ed5569f9b565
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58199
No description provided.