Fix T58199: Spin tool top bar settings don't apply